--- a/src/GUI/Garage.form
+++ b/src/GUI/Garage.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="productPanel" layout-manager="GridLayoutManager" row-count="6" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="425" y="133" width="550" height="415"/>
+      <xy x="42" y="47" width="802" height="561"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -132,7 +132,9 @@
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <model/>
+        </properties>
       </component>
       <component id="da1bb" class="javax.swing.JButton" binding="product11">
         <constraints>
