--- a/src/GUI/ProfilePage.form
+++ b/src/GUI/ProfilePage.form
@@ -5,7 +5,9 @@
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
-    <properties/>
+    <properties>
+      <background color="-5131855"/>
+    </properties>
     <border type="none"/>
     <children>
       <grid id="3b7ea" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -13,7 +15,9 @@
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-5131855"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="51f8b" class="javax.swing.JButton" binding="profilePhotoButton">
@@ -39,7 +43,9 @@
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
             </constraints>
-            <properties/>
+            <properties>
+              <background color="-5131855"/>
+            </properties>
             <border type="none"/>
             <children>
               <component id="68458" class="javax.swing.JLabel">
@@ -47,7 +53,8 @@
                   <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <font size="14" style="1"/>
+                  <font size="18" style="1"/>
+                  <foreground color="-6094769"/>
                   <text value="Name - Surname"/>
                 </properties>
               </component>
@@ -56,7 +63,8 @@
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <font size="14" style="1"/>
+                  <font size="18" style="1"/>
+                  <foreground color="-6094769"/>
                   <text value="e-mail"/>
                 </properties>
               </component>
@@ -66,6 +74,7 @@
                 </constraints>
                 <properties>
                   <font/>
+                  <foreground color="-16777216"/>
                   <text value="Label"/>
                 </properties>
               </component>
@@ -74,6 +83,8 @@
                   <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <background color="-12501183"/>
+                  <foreground color="-16777216"/>
                   <text value="Label"/>
                 </properties>
               </component>
@@ -96,7 +107,9 @@
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <background color="-5131855"/>
+        </properties>
         <border type="none"/>
         <children>
           <component id="10ea" class="javax.swing.JButton" binding="changePasswordButton" default-binding="true">
@@ -104,6 +117,13 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-6094768"/>
+              <borderPainted value="false"/>
+              <contentAreaFilled value="false"/>
+              <enabled value="true"/>
+              <font size="18" style="1"/>
+              <foreground color="-1"/>
+              <opaque value="true"/>
               <text value="Change password"/>
             </properties>
           </component>
